# FaceFinder

./: README.md  pyproject.toml
src/facefinder/: __init__.py  cli.py  index.py
templates/: results.html
